--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
        <img src="images/watch_logo_momento.png" alt="">
       <ul class="nav-bar">
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html #products_section">Products</a></li>
+        <li><a href="index.html">Products</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li class="contact-list"><a href=" index.html #formed">Contact Us</a></li>
+        <li class="contact-list"><a href="index.html">Contact Us</a></li>
       </ul>
     </div>
      <div class="aboutus_content">
